# practice_apache_beam

./: .envrc.example  .gitignore  README.md  pyproject.toml
data/step03/: output.csv-00000-of-00001.csv
src/: main.py  step01_local_processing.py  step02_dataflow_processing.py  step03_ariport.py
