[tool.poetry]
name = "practice_apache_beam"
version = "0.1.0"
description = ""
authors = ["konumaru <konumaru1022@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
pandas = "^1.1.5"
apache-beam = {version = "^2.26.0", extras = ["gcp"]}
timezonefinder = "^4.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
nose = "^1.3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
